[style]: Menu on the bottom [add]: Button to show/hide the menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
+    <header id="menu">
+        <div id="btn-menu" class="btn-menu" onclick="toggleMenu()"><img src="./menu.svg"></div>
         <div id="vel">
             <span onclick="changeSpeed(-0.05)">-</span>
             <h1>Velocidade: 0.70s</h1>
