[add]: Button to change perspective

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <h1>Zoom: 60px</h1>
             <span onclick="changeZoom(+5)">+</span>
         </div>
+        <div id="alt">
+            <span onclick="changeHeight(-.5)">-</span>
+            <h1>Perspectiva: 3.00em</h1>
+            <span onclick="changeHeight(+.5)">+</span>
+        </div>
         <div id="rtx">
             <span></span>
             <h1>RTX: ON</h1>
