--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>3D</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
         <div id="bola" class="ball ball-light" onclick="changeColor('bola')"></div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
