[add]: Link to circles

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h1>Neon: OFF</h1>
             <span onclick="toggleNeon()">TURN</span>
         </div>
+        <a href="./loading.html">Circulos</a>
     </header>
     <div id="scene" class="scene">
         <div id="chao" class="floor floor-light""></div>
